srcs/tester/base/queue/push/log.txt
./base/queue/push/patched.cpp:7:2: error: use of undeclared identifier 'ft'
 ft::queue<int> myqueue;
 ^
./base/queue/push/patched.cpp:14:2: error: use of undeclared identifier 'myqueue'
 myqueue.push (myint);
 ^
./base/queue/push/patched.cpp:18:10: error: use of undeclared identifier 'myqueue'
 while (!myqueue.empty())
         ^
./base/queue/push/patched.cpp:20:22: error: use of undeclared identifier 'myqueue'
 std::cout << ' ' << myqueue.front();
                     ^
./base/queue/push/patched.cpp:21:2: error: use of undeclared identifier 'myqueue'
 myqueue.pop();
 ^
5 errors generated.
